--- a/frontend/assets/css/productos.css
+++ b/frontend/assets/css/productos.css
@@ -215,3 +215,48 @@ textarea {
     background-color: #004085;
 }
 
+/* Estilo para los modales */
+.modal_confirm {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-contenido {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 300px;
+    text-align: center;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.confirm-btn {
+    background-color: #4b8a08;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.confirm-btn:hover {
+    background-color: #3e7306;
+}
+
+.check-icon {
+    color: green;
+    font-size: 24px;
+    margin-right: 5px;
+}
